# NMS.py

./: .gitignore  LICENCE.md  MANIFEST.in  NMS.py.cfg  README.md  broken_patterns.txt  injected.py  log_terminal.py  logo.txt  main.py  pyproject.toml  requirements.txt  version_check.sh
.github/scripts/: version_check.sh
.github/workflows/: pipeline.yml
_cyminhook/: cyminhook-0.1.4-cp310-cp310-win_amd64.whl  cyminhook-0.1.4-cp39-cp39-win_amd64.whl
docs/: change_log.md  index.md  setup.md  writing_libraries.md  writing_mods.md
docs/api/: mod_loader.md
docs/examples/: basic_mod.md
docs/modding/: getting_started.md  quick_reference.md
example_mods/: audio_test_mod.py  gravityManipulator.py  instantScanning.py  inventory_test.py  playerLocation.py  visited_systems.py
example_mods copy/: audio_test_mod.py
mods/: disable_mod_warning.py  misc_tests.py  test_mod.py
nms-py-runner/: CHANGELOG.md  README.md  package-lock.json  package.json
nms-py-runner/src/: extension.ts
nmspy/: __init__.py  _internal.py  _types.py  caching.py  calling.py  common.py  decorators.py  engine.py  errors.py  globals.py  hashing.py  hooking.py  logging.py  math.py  memutils.py  mod_loader.py  process.py  protocols.py  pymhf.cfg  pymhf.toml  states.py  terminal_parser.py  utils.py
nmspy/_internal_mods/: singletons.py  textChatManager.py
nmspy/_internals/: staging.py
nmspy/_internals/mods/: globals.py  singletons.py
nmspy/_scripts/: _preinject.py
nmspy/data/: __init__.old  __init__.py  audiokinetic.py  basic_types.py  common.py  cpptypes.py  engine.py  enums.py  exported_types.py  func_call_sigs.py  func_offsets.py  func_signatures.py  function_offsets.py  function_overloads.py  functions.py  functions.txt  nanovg.py  struct_types.py  structs.py  types.py  vulkan.py
nmspy/data/014f5fd1837e2bd8356669b92109fd3add116137/: func_offsets.py  function_offsets.py
nmspy/data/enums/: __init__.py  external_enums.py  internal_enums.py
nmspy/data/functions/: __init__.py  hooks.py  offsets.py  patterns.py
nmspy/data/types/: core.py  simple.py
nmspy/extractors/: metaclasses.py
steam_mods/: test_mod.py
tests/: test_memutils.py  test_misc.py
tools/: create.py  data.json  extract.py  get_decorator_data.py  update_from_data.py
