[project]
name = "NMSpy"
description = "No Man's Sky python modding API"
requires-python = ">=3.9"
# TODO: Add
license = {file = "LICENSE.md"}
keywords = ["hooking", "games", "hacking", "modding"]
authors = [
  {name = "monkeyman192"}
]
maintainers = [
  {name = "monkeyman192"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "pymhf[gui]>=0.1.13"
]
version = "146194.0"

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "setuptools_scm",
  "twine",
]

[tool.uv]
python-preference = "only-system"

[tool.setuptools.package-dir]
nmspy = "nmspy"

[project.urls]
Homepage = "https://github.com/monkeyman192/NMS.py"
Repository = "https://github.com/monkeyman192/NMS.py.git"

[project.entry-points.pymhflib]
"nmspy" = "nmspy"

[project.entry-points.pymhfcmd]
check = "check"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8", "setuptools_scm_git_semver"]
build-backend = "setuptools.build_meta"
