[project]
name = "NMSpy"
description = "No Man's Sky python modding API"
readme = "README.md"
requires-python = ">=3.9, <4"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["hooking", "games", "hacking", "modding"]
authors = [
  {name = "monkeyman192"}
]
maintainers = [
  {name = "monkeyman192"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "Operating System :: Microsoft",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "pymhf[gui]>=0.1.16"
]
version = "151441.0"

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "setuptools_scm",
  "twine",
  "libcst",
]

[tool.uv]
python-preference = "only-system"

[[tool.uv.index]]
name = "pypi_test"
url = "https://test.pypi.org/simple/"
explicit = true

[tool.setuptools.package-dir]
nmspy = "nmspy"

[project.urls]
Homepage = "https://github.com/monkeyman192/NMS.py"
Repository = "https://github.com/monkeyman192/NMS.py.git"

[project.entry-points.pymhflib]
"nmspy" = "nmspy"

[project.entry-points.pymhfcmd]
check = "check"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8", "setuptools_scm_git_semver"]
build-backend = "setuptools.build_meta"
